objects/Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Grid_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grid_Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Revenues</relationshipLabel>
        <relationshipName>Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_Count__c</fullName>
        <formula>YEAR( Grid_EndDate__c ) - YEAR ( Grid_StartDate__c )+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_EndDate__c</fullName>
        <description>Opportunity End Date</description>
        <formula>Grid_Quote__r.Opportunity.Grid_EndContractDate__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Quote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup relationship to Quote object</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Revenues</relationshipLabel>
        <relationshipName>Revenues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_StartDate__c</fullName>
        <description>Opportunity Start Date</description>
        <formula>Grid_Quote__r.Opportunity.Grid_StartContractDate__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_TotalActualAmount__c</fullName>
        <label>Total Actual Amount</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_ActualAmount__c</summarizedField>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalActualHardwareRevenue__c</fullName>
        <label>Total Actual Hardware Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_ActualAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Category__c</field>
            <operation>equals</operation>
            <value>Hardware</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalActualOneTimeRevenue__c</fullName>
        <description>Sum of all actual one time revenues in the quote</description>
        <label>Total Actual One Time Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_ActualAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Metric__c</field>
            <operation>equals</operation>
            <value>One Time</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalActualRecurringMonthlyRevenues__c</fullName>
        <description>Sum of all actual recurring monthly revenues in the quote</description>
        <label>Total Actual Recurring Monthly Revenues</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_ActualAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Metric__c</field>
            <operation>equals</operation>
            <value>Recurring Monthly</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalActualRecurringYearlyRevenue__c</fullName>
        <description>Sum of all actual recurring yearly revenues in the quote</description>
        <label>Total Actual Recurring Yearly Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_ActualAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Metric__c</field>
            <operation>equals</operation>
            <value>Recurring Yearly</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalActualServicesRevenue__c</fullName>
        <label>Total Actual Services Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_ActualAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Category__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalActualSoftwareRevenue__c</fullName>
        <label>Total Actual Software Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_ActualAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Category__c</field>
            <operation>equals</operation>
            <value>Software</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalPlannedAmount__c</fullName>
        <label>Total Planned Amount</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_PlannedAmount__c</summarizedField>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalPlannedHardwareRevenue__c</fullName>
        <description>Total planned (One Time) revenues for all Hardware products in the Quote</description>
        <label>Total Planned Hardware Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_PlannedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Category__c</field>
            <operation>equals</operation>
            <value>Hardware</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalPlannedOneTimeRevenue__c</fullName>
        <description>Sum of all planned One Time revenues in the quote</description>
        <label>Total Planned One Time Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_PlannedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Metric__c</field>
            <operation>equals</operation>
            <value>One Time</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalPlannedRecurringMonthlyRevenue__c</fullName>
        <description>Sum of all planned Recurring Monthly revenues in the quote</description>
        <label>Total Planned Recurring Monthly Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_PlannedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Metric__c</field>
            <operation>equals</operation>
            <value>Recurring Monthly</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalPlannedRecurringYearlyRevenue__c</fullName>
        <description>Sum of all planned Recurring Yearly revenues in the quote</description>
        <label>Total Planned Recurring Yearly Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_PlannedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Metric__c</field>
            <operation>equals</operation>
            <value>Recurring Yearly</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalPlannedServicesRevenue__c</fullName>
        <label>Total Planned Services Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_PlannedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Category__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_TotalPlannedSoftwareRevenue__c</fullName>
        <label>Total Planned Software Revenue</label>
        <summarizedField>Grid_RevenueSchedule__c.Grid_PlannedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Grid_RevenueSchedule__c.Grid_Category__c</field>
            <operation>equals</operation>
            <value>Software</value>
        </summaryFilterItems>
        <summaryForeignKey>Grid_RevenueSchedule__c.Grid_Revenue__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Revenue</label>
    <nameField>
        <label>Revenue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>